--- a/index.html
+++ b/index.html
@@ -1,51 +1,264 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Executive Mansion</title>
-    <link href="index.css" rel="stylesheet"
-</head>
-<body>
-    <div> 
-        <img src="Seal.jpg" alt="My Logo" class="logo">
-        <h1>The Executive Mansion</h1>
-    </div>
-   
-    <header>
-        <nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Yarmah Davies ODC</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="seal-div">
+        <img src="image/liberia seal.svg" alt="seal logo" />
+        <h3 class="seal-header">THE EXECUTIVE MANSION</h3>
+      </div>
+      <nav class="navbar shadow-md">
+        <ul class="nav-list">
+          <li>
             <a href="#">Home</a>
-            <a href="#">The President</a>
-            <a href="#">The Vice President</a>
-            <a href="#">The First Lady</a>
-            <a href="#">MOS</a>
-            <a href="#">Opportunities</a>
-            <a href="#">Media</a>
-            <a href="#">Contact</a>
-            <a href="#"></a>
-        </nav>
+          </li>
+          <li>
+            <a href="#"
+              >The President
+              <div class="dropdown-menu">
+                <ul>
+                  <li class="list">
+                    <a href="#">President's Biography</a>
+                  </li>
+                  <li class="list"><a href="#">The Cabinet</a></li>
+                  <li class="list"><a href="#">Executive Orders</a></li>
+                  <li class="list"><a href="#">Proclamations</a></li>
+                  <li class="list"><a href="#">Speeches</a></li>
+                  <li class="list"><a href="#">Key Staff</a></li>
+                </ul>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              >The Vice President
+              <div class="dropdown-menu">
+                <ul>
+                  <li class="list">
+                    <a href="#">Vice President's Biography</a>
+                  </li>
+                  <li class="list"><a href="#">Vice President Speeches</a></li>
+                  <li class="list">
+                    <a href="#">Vice President's Cheif of Staff</a>
+                  </li>
+                  <li class="list">
+                    <a href="#">Vice President's News & Press Releases</a>
+                  </li>
+                </ul>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              >The First Lady
+              <div class="dropdown-menu">
+                <ul>
+                  <li class="list"><a href="#">The First Lady Biography</a></li>
+                  <li class="list">
+                    <a href="#">The First Lady News & Press Release</a>
+                  </li>
+                </ul>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              >MOS
+
+              <div class="dropdown-menu">
+                <ul>
+                  <li class="list"><a href="#">Presidential Affairs</a></li>
+                  <li class="list"><a href="#">Without Portfolio</a></li>
+                  <li class="list"><a href="#">Past President Websites</a></li>
+                </ul>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              >Opportunities
+
+              <div class="dropdown-menu">
+                <ul>
+                  <li class="list"><a href="#">Procurement Notice</a></li>
+                  <li class="list">
+                    <a href="#">Scholarships</a>
+                  </li>
+                  <li class="list">
+                    <a href="#">Vacancies</a>
+                  </li>
+                </ul>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              >Media
+              <div class="dropdown-menu">
+                <ul>
+                  <li class="list"><a href="#">Documents & Report</a></li>
+                  <li class="list">
+                    <a href="#">News & Press Releases</a>
+                  </li>
+                  <li class="list">
+                    <a href="#">Videos</a>
+                  </li>
+                  <li class="list">
+                    <a href="#">Photo Gallery</a>
+                  </li>
+                  <li class="list">
+                    <a href="#">Press Briefing</a>
+                  </li>
+                </ul>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">Contact </a>
+          </li>
+          <li>
+            <i
+              style="color: #fff; font-size: 20px; cursor: pointer"
+              class="fa-solid fa-magnifying-glass"
+            ></i>
+          </li>
+        </ul>
+      </nav>
     </header>
-    
-    <div class="outer-div">
-        <div class="inner-div">
-            <img src="Mr.President.jpg" alt="Image" class="image">
-       
-            <h2>
-                President Boakai Condemns <br>
-                Recent Isreal and Iran <br>
-                Conflict,Calls for Restoration<br>
-                 of Peace.
-            </h2>
-            <P>
-                President Joseph Nyuma Boakai,Sr.,has <br>
-                condemned the recent escalation of violent <br>
-                conflict between Isreal and Iran and finds it deeply<br>
-                regretful that political and diplomatic efforts have <br>
-                yet to bring peace and stability to the Middle East. 
-             </P>
+
+    <main class="main-container">
+      <!-- top-div -->
+      <div class="top-div">
+        <div class="image-div shadow-lg">
+          <img src="image/president-image.jpg" alt="president photo" />
         </div>
+        <div class="content-div">
+          <h2 class="heading">
+            President Boakai Condemns Recent Israel and Iran Conflict, Calls for
+            Restoration of Peace.
+          </h2>
+          <hr class="line" />
+          <p>
+            President Joseph Nyuma Boakai, Sr., has condemned the recent
+            escalation of violent conflict between Israel and Iran and finds it
+            deeply regretful that political and diplomatic efforts have yet to
+            bring peace and stability to the Middle East.
+          </p>
+        </div>
+      </div>
 
-    </div>
+      <!-- second-div -->
+      <div class="second-div">
+        <div class="first-grid-item">
+          <div class="title-div">
+            <img src="image/VP Koon.jpg" alt="presidentboikai photo" />
+            <div class="content">
+              <p style="font-weight: bold; margin-bottom: 5px">
+                Honorable Jeremiah Kpan Koung
+              </p>
+              <p style="font-size: 15px; font-weight: 200">
+                Vice President of Liberia
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="second-grid-item">
+          <h3 class="heading">NEWS & PRESS RELEASES</h3>
+          <hr class="line" style="margin-bottom: 1rem" />
 
-</body>
+          <div class="news-h">
+            <p>MONDAY, APRIL 15, 2024</p>
+            <a href="#"
+              >President Boakai Resigns from JNB Foundation Board as Chairman,
+              Announces Successor</a
+            >
+          </div>
+          <div class="news-h">
+            <p>FRIDAY, APRIL 12, 2024</p>
+            <a href="#">President Boakai Praises Liberia's Surfing Potential</a>
+          </div>
+          <div class="news-h">
+            <p>TUESDAY, APRIL 9, 2024</p>
+            <a href="#"
+              >President Boakai Sets Up Inter-Agency Committee On Unprocessed
+              Natural Rubber.</a
+            >
+          </div>
+          <div class="news-h">
+            <p>MONDAY, APRIL 8, 2024</p>
+            <a href="#"
+              >President Boakai Resigns from JNB Foundation Board as Chairman,
+              Announces Successor</a
+            >
+          </div>
+          <div class="news-h">
+            <p>WEDNESDAY, APRIL 3, 2024</p>
+            <a href="#"
+              >President Boakai Nominates and Appoints Additional Officials To
+              Government</a
+            >
+          </div>
+          <div class="news-h">
+            <p>MONDAY, APRIL 1 , 2024</p>
+            <a href="#"
+              >As Ramadan Draws to a Close, President Boakai Fetes Liberian
+              Muslims To An Iftar Dinner</a
+            >
+          </div>
+        </div>
+        <div class="third-grid-item">
+          <h3 class="heading">RECENT DOCUMENTS</h3>
+          <hr class="line" style="margin-bottom: 2.5rem" />
+          <div class="document-div">
+            <a href="#"
+              >Special Remarks Delivered By H.E. Joseph Nyuma Boakai, Sr.
+              President of the Republic of Liberia at the Graduation Ceremony of
+              the At-Risk Youth Empowerment Program (AR-YEP) Thursday, April 11,
+              2024 EJS Ministerial Complex, Congo Town, Liberia</a
+            >
+          </div>
+          <hr style="border: 1px solid #e5e7eb; margin: 15px 0" />
+          <div class="document-div">
+            <a href="#">
+              PRESIDENT BOAKAI REMARKS AT THE RAMADAN DINNER AT THE MINISTERIAL
+              COMPLEX APRIL 5, 2024</a
+            >
+          </div>
+          <hr style="border: 1px solid #e5e7eb; margin: 15px 0" />
+          <div class="document-div">
+            <a href="#"
+              >Executive Order No. 128 - Suspension of surcharge on Petroleum
+              Pricing Structure.pdf</a
+            >
+          </div>
+          <hr style="border: 1px solid #e5e7eb; margin: 15px 0" />
+          <div class="document-div">
+            <a href="#"
+              >President Boakai Issues Executive Order #127 Exempting LWSC From
+              Customs Duties</a
+            >
+          </div>
+          <hr style="border: 1px solid #e5e7eb; margin: 15px 0" />
+          <div class="document-div" style="margin-bottom: 15px">
+            <a href="#">
+              Special Ramadan message Issued by His Excellency Joseph N. Boakai,
+              Sr. President of the Republic of Liberia On the occasion of the
+              start of 2024 ISLAMIC HOLY MONTH OF RAMADAN Sunday, March 10,
+              2024</a
+            >
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- <script
+      src="https://kit.fontawesome.com/29976cb6ae.js"
+      crossorigin="anonymous"
+    ></script> -->
+  </body>
 </html>
